<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="404dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_teacher"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnToSetOffFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:text="@string/btnExitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_like" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/tvSetOffProfessorName"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_teacher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_teacher"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_complexity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tvSetOffDiff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_teacher" />

        <TextView
            android:id="@+id/tv_advise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tv_advice"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_complexity" />

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/tvTaskTitle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_advise" />

        <TextView
            android:id="@+id/tv_examples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/tvTaskText"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_title"
            app:layout_constraintVertical_bias="0.050000012" />

        <ImageButton
            android:id="@+id/btn_like"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples"
            app:srcCompat="@drawable/thumb_up_48px" />

        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/defCount"
            app:layout_constraintBottom_toTopOf="@+id/btnToSetOffFragment"
            app:layout_constraintStart_toEndOf="@+id/btn_like"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples" />

        <ImageButton
            android:id="@+id/btn_dislike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_likes"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples"
            app:srcCompat="@drawable/thumb_down_48px" />

        <TextView
            android:id="@+id/tv_dislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/defCount"
            app:layout_constraintBottom_toTopOf="@+id/btnToSetOffFragment"
            app:layout_constraintStart_toEndOf="@+id/btn_dislike"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>