<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:textColor="#000000"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="404dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp"
            android:layout_margin="5dp"
            android:elevation="25dp"
            tools:ignore="MissingConstraints">
            <ImageView
                android:id="@+id/img_teacher"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/btnExitText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_like" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_mono_medium"
            android:gravity="left"
            android:shadowColor="@color/shadow_name"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/tvDef_sem2Text"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cv_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_complexity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/tvDef_sem2Text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_image" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/tvDef_sem2Text"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_complexity" />

        <TextView
            android:id="@+id/tv_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ibm_plex_mono_medium"
            android:text="@string/tvTaskTitle"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <TextView
            android:id="@+id/tv_examples"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_style"
            android:elevation="13dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/tvDef_sem2Text"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_title" />

        <ImageButton
            android:id="@+id/btn_like"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples"
            app:srcCompat="@drawable/thumb_up_48px" />

        <TextView
            android:id="@+id/tv_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/defCount"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/btnExit"
            app:layout_constraintStart_toEndOf="@+id/btn_like"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples" />

        <ImageButton
            android:id="@+id/btn_dislike"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_likes"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples"
            app:srcCompat="@drawable/thumb_down_48px" />

        <TextView
            android:id="@+id/tv_dislikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/defCount"
            app:layout_constraintBottom_toTopOf="@+id/btnExit"
            app:layout_constraintStart_toEndOf="@+id/btn_dislike"
            app:layout_constraintTop_toBottomOf="@+id/tv_examples" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>